; ModuleID = '/home/carl/AnghaBench/php-src/ext/opcache/Optimizer/extr_sccp.c_ct_eval_del_obj_prop.c'
source_filename = "/home/carl/AnghaBench/php-src/ext/opcache/Optimizer/extr_sccp.c_ct_eval_del_obj_prop.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@FAILURE = common dso_local global i32 0, align 4
@SUCCESS = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32*, i32*)* @ct_eval_del_obj_prop to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @ct_eval_del_obj_prop(i32* %0, i32* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i32*, align 8
  %5 = alloca i32*, align 8
  store i32* %0, i32** %4, align 8
  store i32* %1, i32** %5, align 8
  %6 = load i32*, i32** %4, align 8
  %7 = call i32 @IS_PARTIAL_OBJECT(i32* %6)
  %8 = call i32 @ZEND_ASSERT(i32 %7)
  %9 = load i32*, i32** %5, align 8
  %10 = call i32 @Z_TYPE_P(i32* %9)
  switch i32 %10, label %17 [
    i32 128, label %11
  ]

11:                                               ; preds = %2
  %12 = load i32*, i32** %4, align 8
  %13 = call i32 @Z_ARR_P(i32* %12)
  %14 = load i32*, i32** %5, align 8
  %15 = call i32 @Z_STR_P(i32* %14)
  %16 = call i32 @zend_symtable_del(i32 %13, i32 %15)
  br label %19

17:                                               ; preds = %2
  %18 = load i32, i32* @FAILURE, align 4
  store i32 %18, i32* %3, align 4
  br label %21

19:                                               ; preds = %11
  %20 = load i32, i32* @SUCCESS, align 4
  store i32 %20, i32* %3, align 4
  br label %21

21:                                               ; preds = %19, %17
  %22 = load i32, i32* %3, align 4
  ret i32 %22
}

declare dso_local i32 @ZEND_ASSERT(i32) #1

declare dso_local i32 @IS_PARTIAL_OBJECT(i32*) #1

declare dso_local i32 @Z_TYPE_P(i32*) #1

declare dso_local i32 @zend_symtable_del(i32, i32) #1

declare dso_local i32 @Z_ARR_P(i32*) #1

declare dso_local i32 @Z_STR_P(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
